[project]
name = "hat-juggler"
version = "0.6.14"
description = "Hat Juggler protocol"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "aiohttp ~=3.8.4",
    "hat-aio ~=0.7.9",
    "hat-json ~=0.5.26",
    "hat-util ~=0.6.13",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-juggler.git"
Documentation = "http://hat-juggler.hat-open.com"

[project.optional-dependencies]
dev = ["hat-doit ~=0.15.11"]

[build-system]
requires = ["hat-doit ~=0.15.11"]
build-backend = "hat.doit.pep517"

[tool.hat-doit]
build_wheel_task = "build_py"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
